@@ -2,4 +2,4 @@ gems:
   - jekyll-asciidoc
 asciidoctor:
   attributes:
-    imagesdir: /images
+    imagesdir: /images@
